$Id: History,v 1.9 2000-02-14 17:49:54 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

             History file for geometry/solids/BREPS
	     --------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

14/02/2000 : G. Cosmo		  breps-V01-00-01
 G4BSplineSurface.cc - fixed warnings on HP-aCC
   - removed cast of G4Surface* to G4SurfaceList* (!) in function
     FinalIntersection().
   - replaced wherever needed explicit cast to G4PointRat from G4Point3D
     and viceversa, by using appropriate access functions instead.
 G4SurfaceList.cc
   - initialised 'next' and 'temp' pointers in default constructor.

21/01/2000 : G. Cosmo		  breps-V01-00-00
 Decoupling from NIST STEP reader completed:
   - G4RectangularTrimmedSurface.cc: removed inclusion of
     SdaiCONFIG_CONTROL_DESIGN.h
   - G4PointRat[.hh.cc]: removed unused function
     CopyRationalValue(const RealNode&).
   - G4Conic[.hh.cc]: removed constructor G4Conic(STEPentity&).
   - G4BREPSolid[.hh.cc]: removed unused function CreateSTEPData() and
     any references to STEP/instmgr.h.
   - G4Parabola.hh: removed declared and NOT defined constructors
     G4Parabola(STEPentity&) and G4Parabola(STEPentity&, InstMgr&).
   - G4Hyperbola.hh: removed declared and NOT defined constructors