@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4FCylindricalSurface.hh,v 1.6 2000-01-21 13:47:42 gcosmo Exp $
+// $Id: G4FCylindricalSurface.hh,v 1.7 2000-02-16 12:02:52 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 #ifndef __FCYLINDER_H
@@ -95,9 +95,9 @@ class G4FCylindricalSurface: public G4Surface
   void CalcBBox();
   
   //  function to return class name   
-  virtual char *NameOf() const 
+  virtual const char* NameOf() const 
   {
-    return (char*)("G4FCylindricalSurface"); 
+    return "G4FCylindricalSurface"; 
   }
   
   //  printing function
