@@ -1,4 +1,4 @@
-$Id: History,v 1.9 2000-02-14 17:49:54 gcosmo Exp $
+$Id: History,v 1.10 2000-02-16 12:02:50 gcosmo Exp $
 ----------------------------------------------------------------------------
 
      =========================================================
@@ -25,6 +25,12 @@ committal in the CVS repository !
      and viceversa, by using appropriate access functions instead.
  G4SurfaceList.cc
    - initialised 'next' and 'temp' pointers in default constructor.
+ Changed 'char*' to 'const char*' as return-type for methods returning the
+ concrete type name; removed temporary cast to char*. Updated files:
+   - G4ThreeMat.hh, G4Surface.hh, G4SphericalSurface.hh, 
+     G4RectangularTrimmedSurface.hh, G4FPlane.hh, G4FCylindricalSurface.hh,
+     G4FConicalSurface.hh, G4CylindricalSurface.hh, G4ConicalSurface.hh,
+     G4Curve.hh, G4BSplineSurface[.hh.cc].
 
 21/01/2000 : G. Cosmo		  breps-V01-00-00
  Decoupling from NIST STEP reader completed:
@@ -46,7 +52,7 @@ committal in the CVS repository !
  Temporary fixes for porting on SUN-CC 5.0 compiler. Casts to char*:
    - G4ThreeMat.hh, G4Surface.hh, G4SphericalSurface.hh, 
      G4RectangularTrimmedSurface.hh, G4FPlane.hh, G4FCylindricalSurface.hh,
-     G4FConicalSurface.hh, G4CylindricalSurface.hh, G4ConicalSurface.hh,
+     G4FConicalSurface.hh, G4CylindricalSurface.hh, G4ConicalSurface.hh.
 
 08/11/1999 : G. Cosmo             breps-V00-01-00
  First step for decoupling BREPS from NIST STEP reader:
